Joke/CompilerRuntime/Inworldz.Joke/Compiler/LSLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.3.1.7705
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.3.1.7705 LSL.g 2012-05-22 12:14:56

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  Inworldz.Joke.Compiler 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3.1.7705")]
[System.CLSCompliant(false)]
public partial class LSLParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN_EQ", "COMMA", "COMMENT_BLOCK", "COMMENT_SINGLE", "DO_WHILE_STMT", "ELIST", "ELSE_PART", "ESC_SEQ", "EVENT_DEF", "EXPONENT", "EXPR", "FLOAT_LITERAL", "FOR_STMT", "FUNC_BLOCK", "GT", "ID", "IF_STMT", "INDEX", "INTEGER_LITERAL", "JUMP_STMT", "LABEL", "LIST_LITERAL", "LPAREN", "LT", "METHOD_CALL", "METHOD_DEF", "MINUS", "NEWLINE", "PARAM_DECL", "POST_DECREMENT", "POST_INCREMENT", "PRE_DECREMENT", "PRE_INCREMENT", "RETURN_STMT", "ROTATION_LITERAL", "RPAREN", "SEMI", "STATE_BLOCK", "STATE_CHG", "STATE_DEF", "STRING_LITERAL", "SUBSCRIPT", "TYPE", "TYPE_CAST", "UNARY_BIT_NOT", "UNARY_BOOL_NOT", "UNARY_MINUS", "VAR_DECL", "VECTOR_LITERAL", "WHILE_STMT", "WS", "'!'", "'!='", "'%'", "'%='", "'&&'", "'&'", "'*'", "'*='", "'+'", "'++'", "'+='", "'--'", "'-='", "'.'", "'/'", "'/='", "'<<'", "'<<='", "'<='", "'=='", "'>='", "'>>'", "'>>='", "'@'", "'['", "']'", "'^'", "'default'", "'do'", "'else'", "'for'", "'if'", "'jump'", "'return'", "'state'", "'while'", "'{'", "'|'", "'||'", "'}'", "'~'"
	};
	public const int EOF=-1;
	public const int ASSIGN_EQ=4;
	public const int COMMA=5;
	public const int COMMENT_BLOCK=6;
	public const int COMMENT_SINGLE=7;
	public const int DO_WHILE_STMT=8;
	public const int ELIST=9;
	public const int ELSE_PART=10;
	public const int ESC_SEQ=11;
	public const int EVENT_DEF=12;
	public const int EXPONENT=13;
	public const int EXPR=14;
	public const int FLOAT_LITERAL=15;
	public const int FOR_STMT=16;
	public const int FUNC_BLOCK=17;
	public const int GT=18;
	public const int ID=19;
	public const int IF_STMT=20;
	public const int INDEX=21;
	public const int INTEGER_LITERAL=22;
	public const int JUMP_STMT=23;
	public const int LABEL=24;
	public const int LIST_LITERAL=25;
	public const int LPAREN=26;
	public const int LT=27;
	public const int METHOD_CALL=28;
	public const int METHOD_DEF=29;
	public const int MINUS=30;
	public const int NEWLINE=31;
	public const int PARAM_DECL=32;
	public const int POST_DECREMENT=33;
	public const int POST_INCREMENT=34;
	public const int PRE_DECREMENT=35;
	public const int PRE_INCREMENT=36;
	public const int RETURN_STMT=37;
	public const int ROTATION_LITERAL=38;
	public const int RPAREN=39;
	public const int SEMI=40;
	public const int STATE_BLOCK=41;
	public const int STATE_CHG=42;
	public const int STATE_DEF=43;
	public const int STRING_LITERAL=44;
	public const int SUBSCRIPT=45;
	public const int TYPE=46;
	public const int TYPE_CAST=47;
	public const int UNARY_BIT_NOT=48;
	public const int UNARY_BOOL_NOT=49;
	public const int UNARY_MINUS=50;
	public const int VAR_DECL=51;
	public const int VECTOR_LITERAL=52;
	public const int WHILE_STMT=53;
	public const int WS=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int T__70=70;
	public const int T__71=71;
	public const int T__72=72;
	public const int T__73=73;
	public const int T__74=74;
	public const int T__75=75;
	public const int T__76=76;
	public const int T__77=77;
	public const int T__78=78;
	public const int T__79=79;
	public const int T__80=80;
	public const int T__81=81;
	public const int T__82=82;
	public const int T__83=83;
	public const int T__84=84;
	public const int T__85=85;
	public const int T__86=86;
	public const int T__87=87;
	public const int T__88=88;
	public const int T__89=89;
	public const int T__90=90;
	public const int T__91=91;
	public const int T__92=92;
	public const int T__93=93;
	public const int T__94=94;
	public const int T__95=95;

	// delegates
	// delegators

	public LSLParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public LSLParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[140+1];

		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);

		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();


		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return LSLParser.tokenNames; } }
	public override string GrammarFileName { get { return "LSL.g"; } }


		int ErrorCount = 0;
		bool GTDisabled = false;

		public override void Recover(IIntStream input, RecognitionException re)
	    {
			if (++ErrorCount == 10) throw new Inworldz.Joke.Types.TooManyErrorsException("Too many errors", re);
	        base.Recover(input, re);
	    }

		private bool IsNotVector() 
	    { 
	        IToken tok1 = input.LT(1);
	        IToken tok2 = input.LT(2);

	        //"standard vector" case
	        if (tok1 != null && tok1.Type == LT)
	        {
	            return false;
	        }

	        //"negative vector" case
	        if (tok2 != null && tok2.Type == LT && tok1.Type == MINUS)
	        {
	            return false;
	        }

	        return true; 
	    }

		private bool GTNotDisabled()
		{
			return !GTDisabled;
		}


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public sealed partial class prog_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<LSLAst>, IAstRuleReturnScope
	{
		private LSLAst _tree;
		public LSLAst Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public prog_return(LSLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LSLParser grammar);
	}

	partial void EnterRule_prog();
	partial void LeaveRule_prog();

	// $ANTLR start "prog"
	// LSL.g:95:8: public prog : ( globalStmt )+ EOF ;
	[GrammarRule("prog")]
	public LSLParser.prog_return prog()
	{
		EnterRule_prog();
		EnterRule("prog", 1);
		TraceIn("prog", 1);
		LSLParser.prog_return retval = new LSLParser.prog_return(this);
		retval.Start = (IToken)input.LT(1);
		int prog_StartIndex = input.Index;
		LSLAst root_0 = default(LSLAst);

		IToken EOF2 = default(IToken);
		LSLParser.globalStmt_return globalStmt1 = default(LSLParser.globalStmt_return);

		LSLAst EOF2_tree = default(LSLAst);

		try { DebugEnterRule(GrammarFileName, "prog");
		DebugLocation(95, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 1)) { return retval; }
			// LSL.g:96:3: ( ( globalStmt )+ EOF )
			DebugEnterAlt(1);
			// LSL.g:96:3: ( globalStmt )+ EOF
			{
			root_0 = (LSLAst)adaptor.Nil();

			DebugLocation(96, 3);
			// LSL.g:96:3: ( globalStmt )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if (((LA1_0>=COMMENT_BLOCK && LA1_0<=COMMENT_SINGLE)||LA1_0==ID||LA1_0==NEWLINE||LA1_0==TYPE||LA1_0==82||LA1_0==89))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// LSL.g:96:3: globalStmt
					{
					DebugLocation(96, 3);
					PushFollow(Follow._globalStmt_in_prog283);
					globalStmt1=globalStmt();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, globalStmt1.Tree);

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(96, 15);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_prog286); if (state.failed) return retval;
			if (state.backtracking == 0) {
			EOF2_tree = (LSLAst)adaptor.Create(EOF2);
			adaptor.AddChild(root_0, EOF2_tree);
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (LSLAst)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (LSLAst)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("prog", 1);
			LeaveRule("prog", 1);
			LeaveRule_prog();
			if (state.backtracking > 0) { Memoize(input, 1, prog_StartIndex); }
		}
		DebugLocation(97, 1);
		} finally { DebugExitRule(GrammarFileName, "prog"); }
		return retval;

	}
	// $ANTLR end "prog"

	private sealed partial class globalStmt_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<LSLAst>, IAstRuleReturnScope
	{
		private LSLAst _tree;
		public LSLAst Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public globalStmt_return(LSLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LSLParser grammar);
	}

	partial void EnterRule_globalStmt();
	partial void LeaveRule_globalStmt();

	// $ANTLR start "globalStmt"
	// LSL.g:99:1: globalStmt : ( varDecl | NEWLINE | COMMENT_SINGLE | COMMENT_BLOCK | funcDef | stateDef );
	[GrammarRule("globalStmt")]
	private LSLParser.globalStmt_return globalStmt()
	{
		EnterRule_globalStmt();
		EnterRule("globalStmt", 2);
		TraceIn("globalStmt", 2);
		LSLParser.globalStmt_return retval = new LSLParser.globalStmt_return(this);
		retval.Start = (IToken)input.LT(1);
		int globalStmt_StartIndex = input.Index;
		LSLAst root_0 = default(LSLAst);

		IToken NEWLINE4 = default(IToken);
		IToken COMMENT_SINGLE5 = default(IToken);
		IToken COMMENT_BLOCK6 = default(IToken);
		LSLParser.varDecl_return varDecl3 = default(LSLParser.varDecl_return);
		LSLParser.funcDef_return funcDef7 = default(LSLParser.funcDef_return);
		LSLParser.stateDef_return stateDef8 = default(LSLParser.stateDef_return);

		LSLAst NEWLINE4_tree = default(LSLAst);
		LSLAst COMMENT_SINGLE5_tree = default(LSLAst);
		LSLAst COMMENT_BLOCK6_tree = default(LSLAst);

		try { DebugEnterRule(GrammarFileName, "globalStmt");
		DebugLocation(99, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 2)) { return retval; }
			// LSL.g:100:2: ( varDecl | NEWLINE | COMMENT_SINGLE | COMMENT_BLOCK | funcDef | stateDef )
			int alt2=6;
			try { DebugEnterDecision(2, false);
			switch (input.LA(1))
			{
			case TYPE:
				{
				int LA2_1 = input.LA(2);

				if ((LA2_1==ID))
				{
					int LA2_7 = input.LA(3);

					if ((LA2_7==LPAREN))
					{
						alt2 = 5;
					}
					else if ((LA2_7==ASSIGN_EQ||LA2_7==SEMI))
					{
						alt2 = 1;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 2, 7, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 1, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case NEWLINE:
				{
				alt2 = 2;
				}
				break;
			case COMMENT_SINGLE:
				{
				alt2 = 3;
				}
				break;
			case COMMENT_BLOCK:
				{
				alt2 = 4;
				}
				break;
			case ID:
				{
				alt2 = 5;
				}
				break;
			case 82:
			case 89:
				{
				alt2 = 6;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// LSL.g:100:4: varDecl
				{
				root_0 = (LSLAst)adaptor.Nil();

				DebugLocation(100, 4);
				PushFollow(Follow._varDecl_in_globalStmt299);
				varDecl3=varDecl();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, varDecl3.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// LSL.g:101:4: NEWLINE
				{
				root_0 = (LSLAst)adaptor.Nil();

				DebugLocation(101, 11);
				NEWLINE4=(IToken)Match(input,NEWLINE,Follow._NEWLINE_in_globalStmt304); if (state.failed) return retval;

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// LSL.g:102:4: COMMENT_SINGLE
				{
				root_0 = (LSLAst)adaptor.Nil();

				DebugLocation(102, 18);
				COMMENT_SINGLE5=(IToken)Match(input,COMMENT_SINGLE,Follow._COMMENT_SINGLE_in_globalStmt310); if (state.failed) return retval;

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// LSL.g:103:5: COMMENT_BLOCK
				{
				root_0 = (LSLAst)adaptor.Nil();

				DebugLocation(103, 18);
				COMMENT_BLOCK6=(IToken)Match(input,COMMENT_BLOCK,Follow._COMMENT_BLOCK_in_globalStmt317); if (state.failed) return retval;

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// LSL.g:104:4: funcDef
				{
				root_0 = (LSLAst)adaptor.Nil();

				DebugLocation(104, 4);
				PushFollow(Follow._funcDef_in_globalStmt323);
				funcDef7=funcDef();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, funcDef7.Tree);

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// LSL.g:105:4: stateDef
				{
				root_0 = (LSLAst)adaptor.Nil();

				DebugLocation(105, 4);
				PushFollow(Follow._stateDef_in_globalStmt328);
				stateDef8=stateDef();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, stateDef8.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (LSLAst)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (LSLAst)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("globalStmt", 2);
			LeaveRule("globalStmt", 2);
			LeaveRule_globalStmt();
			if (state.backtracking > 0) { Memoize(input, 2, globalStmt_StartIndex); }
		}
		DebugLocation(106, 1);
		} finally { DebugExitRule(GrammarFileName, "globalStmt"); }
		return retval;

	}
	// $ANTLR end "globalStmt"

	private sealed partial class stateDef_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<LSLAst>, IAstRuleReturnScope
	{
		private LSLAst _tree;
		public LSLAst Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public stateDef_return(LSLParser grammar) {OnCreated(grammar);}
		partial void OnCreated(LSLParser grammar);
	}

	partial void EnterRule_stateDef();
	partial void LeaveRule_stateDef();

	// $ANTLR start "stateDef"
	// LSL.g:108:1: stateDef : ( 'state' ID stateBlock -> ^( STATE_DEF[$ID] ID stateBlock ) |d= 'default' stateBlock -> ^( STATE_DEF[$d] $d stateBlock ) );
	[GrammarRule("stateDef")]
	private LSLParser.stateDef_return stateDef()
	{
		EnterRule_stateDef();
		EnterRule("stateDef", 3);
		TraceIn("stateDef", 3);
		LSLParser.stateDef_return retval = new LSLParser.stateDef_return(this);
		retval.Start = (IToken)input.LT(1);
		int stateDef_StartIndex = input.Index;
		LSLAst root_0 = default(LSLAst);

		IToken d = default(IToken);
		IToken string_literal9 = default(IToken);
		IToken ID10 = default(IToken);
		LSLParser.stateBlock_return stateBlock11 = default(LSLParser.stateBlock_return);
		LSLParser.stateBlock_return stateBlock12 = default(LSLParser.stateBlock_return);

		LSLAst d_tree = default(LSLAst);
		LSLAst string_literal9_tree = default(LSLAst);
		LSLAst ID10_tree = default(LSLAst);
		RewriteRuleITokenStream stream_89=new RewriteRuleITokenStream(adaptor,"token 89");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_82=new RewriteRuleITokenStream(adaptor,"token 82");
		RewriteRuleSubtreeStream stream_stateBlock=new RewriteRuleSubtreeStream(adaptor,"rule stateBlock");
		try { DebugEnterRule(GrammarFileName, "stateDef");
		DebugLocation(108, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 3)) { return retval; }
			// LSL.g:109:2: ( 'state' ID stateBlock -> ^( STATE_DEF[$ID] ID stateBlock ) |d= 'default' stateBlock -> ^( STATE_DEF[$d] $d stateBlock ) )
			int alt3=2;
			try { DebugEnterDecision(3, false);
			int LA3_0 = input.LA(1);

			if ((LA3_0==89))
			{
				alt3 = 1;
			}
			else if ((LA3_0==82))
			{
				alt3 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// LSL.g:109:4: 'state' ID stateBlock
				{
				DebugLocation(109, 4);
				string_literal9=(IToken)Match(input,89,Follow._89_in_stateDef339); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_89.Add(string_literal9);

				DebugLocation(109, 12);
				ID10=(IToken)Match(input,ID,Follow._ID_in_stateDef341); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_ID.Add(ID10);

				DebugLocation(109, 15);
				PushFollow(Follow._stateBlock_in_stateDef343);
				stateBlock11=stateBlock();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_stateBlock.Add(stateBlock11.Tree);


				{
				// AST REWRITE
				// elements: ID, stateBlock
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
